<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aquent</string>

    <!--    Menu tags-->
    <string name="bottom_nav_home">Main</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_settings">Settings</string>

    <!--    More Stats-->
    <string name="more_stats_title">Detailed statistics</string>
    <string name="daily_norm">Daily rate</string>
    <string name="today">Today</string>
    <string name="_of">of</string>
    <string name="weekly_norm">Weekly rate</string>
    <string name="your_goals">Your goals</string>
    <string name="now_week">This week</string>

    <!--    Dialog add water-->
    <string name="add_water">Add water</string>
    <string name="volume_water">Volume</string>
    <string name="volume_sub">Specify volume in milliliters</string>
    <string name="unit_count">ml</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>

    <!--    Dialog edit user-->
    <string name="close_window">Close dialog</string>
    <string name="edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="weight">Weight</string>

    <!--    Dialog list item-->
    <string name="list_records">List of records</string>

    <!--    End fragment settings-->
    <string name="end_sub">Hurry up and press the start button and start monitoring the water balance</string>
    <string name="settings_end">Settings completed</string>

    <!--    Fragment hello-->
    <string name="login">Welcome!</string>
    <string name="login_sub">We are glad to welcome you to our application! We hope you find a lot of useful information here.</string>
    <string name="button_start">Start</string>

    <!--    Fragment home-->
    <string name="box1_text">Your water consumption rate</string>
    <string name="box2_text">Today</string>
    <string name="box2_button">Open the list</string>
    <string name="box3_text">Detailed statistics</string>
    <string name="box3_text_sub">Last week</string>
    <string name="box4_text">What kind of water should not be drunk</string>
    <string name="box4_text_sub">Safe and affordable \nwater is an important factor in human health,
         whether it is used for drinking</string>
    <string name="box4_button">View more</string>
    <string name="ms_open">Open detailed statistics</string>
    <string name="close_who">Close Recommendations</string>
    <string name="sub_text_home1">is</string>
    <string name="sub_text_home2">liters, in accordance with the calculation of 35 milliliters per 1 kilogram of body weight</string>

    <!--    ResetUser Dialog-->
    <string name="resetProfileMessage">After a reset, the profile cannot be restored!</string>
    <string name="resetProfileTitle">Reset profile?</string>
    <string name="reset_ok">OK</string>

    <string name="button_next">Next</string>

    <!--    Fragment name-->
    <string name="setName">What is your name?</string>
    <string name="setNameInput">Name</string>

    <!--    Fragment gender-->
    <string name="setGender">What is your gender?</string>
    <string name="setGenderInput">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!--    Fragment weight-->
    <string name="setWeight">Your weight</string>
    <string name="setWeightInput">weight</string>

    <!--    Fragment physical-->
    <string name="setPhysical">Choice your physical activity</string>

    <!--    Fragment profile-->
    <string name="buttonEdit">Edit profile</string>
    <string name="buttonReset">Reset profile</string>
    <string name="unit_weight">kg</string>

    <!--    Item card water-->
    <string name="open_popup">Open the menu</string>
    <string name="image_water">list item</string>

    <!--    Popup menu-->
    <string name="delete">Delete</string>

    <!--    Errors-->
    <string name="empty_error">Empty field</string>
    <string name="weight_range_error">Weight range should be in 30–150 kilograms</string>
    <string name="weight_format_error">Invalid format. Should be 60.0</string>
    <string name="gender_choose_error">You should choose one gender</string>


    <string name="field_ml">from 100 to 1000 ml.</string>

    <string name="volume_l">L</string>

    <string name="toast_exit">Repeat to exit</string>


    <!--    ads google-->
    <string name="justBannerKey" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>