<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".presentation.home.DialogEditUser">

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/three"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/closeDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/close_window"
            android:padding="15dp"
            android:src="@drawable/ic_close_dialog" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scroll23"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/saveEditsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameEditInput"
                style="@style/InputMaterial"
                android:hint="@string/setNameInput"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextMaterial"
                    android:inputType="textPersonName"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightEditInput"
                style="@style/InputMaterial"
                android:layout_marginBottom="20dp"
                android:hint="@string/setWeightInput"
                app:counterEnabled="true"
                app:counterMaxLength="4"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextMaterial"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/gender"
                style="@style/Text.SizeMedium"
                android:text="@string/gender" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:enabled="false"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/female" />
            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/physical"
                style="@style/Text.SizeMedium"
                android:text="@string/setPhysical" />

            <Spinner
                android:id="@+id/physicalChoicer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                tools:listitem="@layout/physical_item" />

        </LinearLayout>

    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveEditsButton"
        style="@style/Button"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>