<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.FragmentEnd">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name"
        style="@style/Text.SizeBig"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subTitle"
        style="@style/Text.SizeSmall"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:text="@string/end_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:contentDescription="@string/settings_end"
        android:src="@drawable/ic_performed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitle" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStartMain"
        style="@style/Button.ButtonRightMaterial"
        android:text="@string/button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>