<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.FragmentName">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNextWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                style="@style/Text.SizeBig"
                android:layout_centerHorizontal="true"
                android:text="@string/setName" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldName"
                style="@style/InputMaterial"
                android:layout_below="@+id/title"
                android:layout_marginBottom="20dp"
                android:hint="@string/setNameInput"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextMaterial"
                    android:inputType="textPersonName"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNextWeight"
        style="@style/Button.ButtonRightMaterial"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>